--- a/README.html
+++ b/README.html
@@ -15,12 +15,12 @@
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cosmo.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
-<link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<link href="site_libs/highlightjs-9.12.0/textmate.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
@@ -68,6 +68,7 @@ h6 {
 }
 </style>
 
+<link rel="stylesheet" href="webpage.css" type="text/css" />
 
 </head>
 
@@ -274,7 +275,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Cameron's Website</a>
+      <a class="navbar-brand" href="index.html">Cameron Lyons</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -282,7 +283,7 @@ $(document).ready(function () {
   <a href="resume.html">Resume</a>
 </li>
 <li>
-  <a href="pagename.html">Pagetitle</a>
+  <a href="project.html">Project Example</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -305,6 +306,26 @@ $(document).ready(function () {
 <p>This repository provides the skeleton for a basic web page compiled using the <code>rmarkdown</code> package’s built-in site generator, as described in <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html">Section 10.5</a> of <a href="https://bookdown.org/yihui/rmarkdown/"><em>R Markdown: The Definitive Guide</em></a>. It was created to serve as the starting point for a personal web page <a href="(https://stat-jet-asu.github.io/DataScience1/Projects/Project00.html)">assignment</a> for students enrolled in <a href="https://stat-jet-asu.github.io/DataScience1/">STT3850 Data Science 1</a> at <a href="https://www.appstate.edu/">Appalachian State University</a>.</p>
 </div>
 
+<div id="footer">
+
+
+<p>
+<strong>Cameron Lyons</strong><br>
+
+Baseball Data Analytics<br>
+Phone: 336-407-4710<br>
+<a href="mailto:lyonscf@appstate.edu">lyonscf@appstate.edu</a><br>
+<img src="asu-logo-white-600.png" style="background-color:black; width:180px; float:left;" width =  /></p>
+
+<p>&nbsp;</p>
+
+<p><strong>Mailing Address</strong><br>
+<a href = "https://appstatesports.com/">Appalachian State University Athletics</a><br>
+<a href = "https://maps.appstate.edu/campus-map/35">Jim and Bettie Smith Stadium</a><br>
+Bodenheimer Dr<br>ASU Box 32153<br>Boone, NC 28608</p>
+
+
+</div>
 
 
 
