--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Past Baseball Project</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -297,21 +297,11 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Past Baseball Project</h1>
 
 </div>
 
 
-<hr>
-<p style="text-align:justify">
-<p>I am currently working towards my bachelor’s degree in Recreation Management with a minor in Statistics. Working with the Appalachian State Baseball Team since the Fall of 2018, I have gained tremendous expertise in general coding with R.<br></p>
-I am thankful for the many opportunities that I have been given including being around such a supporting family. My father (pictured left) is nothing but helpful for my journey to become a proffesional baseball data analyst. My mother and close cousin (pictured right) have also fell accustomed to the cold conditions of Boone.<br>
-</p>
-<center>
-<p>
-<img src="dad.png" style = "height:400px"><img src="mom.png" style = "height:400px">
-</p>
-</center>
 <hr>
 
 <div id="footer">
