--- a/resume.html
+++ b/resume.html
@@ -303,6 +303,29 @@ $(document).ready(function () {
 
 
 <hr>
+<div id="key-skills" class="section level2">
+<h2>Key Skills</h2>
+<ul>
+<li>Genuine Passion for Baseball and Analytics</li>
+<li>Coding in R</li>
+<li>Over a Decade of Baseball Experience</li>
+<li>Thorough Attention to Detail</li>
+<li>Team Player</li>
+</ul>
+</div>
+<div id="experience" class="section level2">
+<h2>Experience</h2>
+<p><strong>Fall 2018</strong><br> Data Collection | Trackman<br> Data Analysis | R Coding<br> <strong>Winter 2016</strong><br> Forbush High School Basketball | Statistician</p>
+</div>
+<div id="education" class="section level2">
+<h2>Education</h2>
+<p><strong>June 2017</strong><br> Forbush High School | High School Diploma<br> <strong>Present</strong><br> Appalachian State University | Recreation Management Major</p>
+</div>
+<div id="employment" class="section level1">
+<h1>Employment</h1>
+<p><strong>William G. White Family YMCA</strong><br> Lifegaurd | 2 Years<br> <strong>Parkway Ford</strong><br> Mechanic | Summer 2018<br> <strong>Appalachian State University</strong><br> SRC Scorer/Timer | Spring 2019</p>
+<hr>
+</div>
 
 <div id="footer">
 
