--- a/project.html
+++ b/project.html
@@ -303,6 +303,9 @@ $(document).ready(function () {
 
 
 <hr>
+<p><img src="project_files/figure-html/unnamed-chunk-1-1.png" width="384" style="display: block; margin: auto;" /></p>
+<p><img src="project_files/figure-html/unnamed-chunk-2-1.png" width="384" style="display: block; margin: auto;" /></p>
+<p><img src="project_files/figure-html/unnamed-chunk-3-1.png" width="384" style="display: block; margin: auto;" /></p>
 
 <div id="footer">
 
