--- a/README.html
+++ b/README.html
@@ -301,9 +301,9 @@ $(document).ready(function () {
 </div>
 
 
-<div id="basicwebpagetemplate" class="section level1">
-<h1>basicwebpagetemplate</h1>
-<p>This repository provides the skeleton for a basic web page compiled using the <code>rmarkdown</code> package’s built-in site generator, as described in <a href="https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html">Section 10.5</a> of <a href="https://bookdown.org/yihui/rmarkdown/"><em>R Markdown: The Definitive Guide</em></a>. It was created to serve as the starting point for a personal web page <a href="(https://stat-jet-asu.github.io/DataScience1/Projects/Project00.html)">assignment</a> for students enrolled in <a href="https://stat-jet-asu.github.io/DataScience1/">STT3850 Data Science 1</a> at <a href="https://www.appstate.edu/">Appalachian State University</a>.</p>
+<div id="cameron-lyons-webpage" class="section level1">
+<h1>Cameron Lyons’ Webpage</h1>
+<p><a href="https://cameronlyons.github.io">Webpage</a> for Cameron Lyons</p>
 </div>
 
 <div id="footer">
