--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Cameron Lyons’ Resume</title>
+<title>Resume</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -297,7 +297,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Cameron Lyons’ Resume</h1>
+<h1 class="title toc-ignore">Resume</h1>
 
 </div>
 
