--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Team Batting</title>
+<title>Abou Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -277,7 +277,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Appalachian State Baseball</a>
+      <a class="navbar-brand" href="index.html">Cameron Lons</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -312,7 +312,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Team Batting</h1>
+<h1 class="title toc-ignore">Abou Me</h1>
 
 </div>
 
@@ -326,7 +326,7 @@ $(document).ready(function () {
 </p>
 </center>
 <p><br></p>
-<p><em>This site was last rendered on Saturday, February 09, 2019 at 07:07:50 PM.</em></p>
+<p><em>This site was last rendered on Saturday, February 09, 2019 at 07:49:16 PM.</em></p>
 <hr>
 
 <div id="footer">
