--- a/project.html
+++ b/project.html
@@ -277,7 +277,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Appalachian State Baseball</a>
+      <a class="navbar-brand" href="index.html">Cameron Lons</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
