--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Abou Me</title>
+<title>About Me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -312,7 +312,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Abou Me</h1>
+<h1 class="title toc-ignore">About Me</h1>
 
 </div>
 
@@ -326,7 +326,7 @@ $(document).ready(function () {
 </p>
 </center>
 <p><br></p>
-<p><em>This site was last rendered on Saturday, February 09, 2019 at 07:55:36 PM.</em></p>
+<p><em>This site was last rendered on Saturday, February 09, 2019 at 07:57:41 PM.</em></p>
 <hr>
 
 <div id="footer">
