--- a/footer.html
+++ b/footer.html
@@ -1,10 +1,10 @@
-<div id="footer">
+<div id = "footer">
 
 
 <p>
 <strong>Cameron Lyons</strong><br>
 
-Baseball Data Analytics<br>
+AppState Baseball Data Analytics<br>
 Phone: 336-407-4710<br>
 <a href="mailto:lyonscf@appstate.edu">lyonscf@appstate.edu</a><br>
 <img src="asu-logo-white-600.png" style="background-color:black; width:180px; float:left;" width =  /></p>
@@ -12,9 +12,8 @@ Phone: 336-407-4710<br>
 <p>&nbsp;</p>
 
 <p><strong>Mailing Address</strong><br>
-<a href = "https://appstatesports.com/">Appalachian State University Athletics</a><br>
-<a href = "https://maps.appstate.edu/campus-map/35">Jim and Bettie Smith Stadium</a><br>
-Bodenheimer Dr<br>ASU Box 32153<br>Boone, NC 28608</p>
+3900 Smitherman Road<br>
+East Bend, NC, 27018
 
 
 </div>
